--- a/serverless-email/serverless.yml
+++ b/serverless-email/serverless.yml
@@ -58,6 +58,7 @@ functions:
 plugins:
   - serverless-offline
   - serverless-python-requirements
+  - serverless-dotenv-plugin
 
 custom:
   # Python requirements configuration
