--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,12 +10,17 @@
         "preview": "vite preview"
     },
     "dependencies": {
-        "react": "^18.2.0",
-        "react-dom": "^18.2.0",
-        "react-router-dom": "^6.21.0",
+        "@fullcalendar/daygrid": "^6.1.20",
+        "@fullcalendar/icalendar": "^6.1.20",
+        "@fullcalendar/interaction": "^6.1.20",
+        "@fullcalendar/react": "^6.1.20",
+        "@fullcalendar/timegrid": "^6.1.20",
         "axios": "^1.6.2",
         "date-fns": "^3.0.6",
-        "lucide-react": "^0.303.0"
+        "lucide-react": "^0.303.0",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "react-router-dom": "^6.21.0"
     },
     "devDependencies": {
         "@types/react": "^18.2.43",
