--- a/serverless-email/package.json
+++ b/serverless-email/package.json
@@ -7,7 +7,8 @@
     "devDependencies": {
         "serverless": "^3.38.0",
         "serverless-offline": "^13.3.0",
-        "serverless-python-requirements": "^6.0.0"
+        "serverless-python-requirements": "^6.0.0",
+        "serverless-dotenv-plugin": "^6.0.0"
     },
     "scripts": {
         "start": "serverless offline",
@@ -15,7 +16,7 @@
         "deploy:prod": "serverless deploy --stage prod",
         "remove": "serverless remove",
         "logs": "serverless logs -f sendEmail",
-        "invoke": "serverless invoke local -f sendEmail -d '{\"body\": \"{\\\"action\\\": \\\"SIGNUP_WELCOME\\\", \\\"recipient\\\": \\\"test@example.com\\\", \\\"data\\\": {\\\"name\\\": \\\"Test User\\\", \\\"role\\\": \\\"PATIENT\\\"}}\"}'",
+        "invoke": "serverless invoke local -f sendEmail -d \"{\\\"body\\\": \\\"{\\\\\\\"action\\\\\\\": \\\\\\\"SIGNUP_WELCOME\\\\\\\", \\\\\\\"recipient\\\\\\\": \\\\\\\"test@example.com\\\\\\\", \\\\\\\"data\\\\\\\": {\\\\\\\"name\\\\\\\": \\\\\\\"Test User\\\\\\\", \\\\\\\"role\\\\\\\": \\\\\\\"PATIENT\\\\\\\"}}\\\"}\"",
         "test": "python handler.py"
     }
 }
